part-2/201/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ex-201
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ex-201
  template:
    metadata:
      labels:
        app: ex-201
    spec:
      containers:
        - name: pingpong
          imagePullPolicy: Always
          image: dievskiy/pingpong:v3
        - name: log-output
          imagePullPolicy: Always
          image: dievskiy/log-output:v14
