part-2/201/manifests/service_logoutput.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-v201-svc
spec:
  type: ClusterIP
  selector:
    app: ex-201
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3333
