part-2/201/manifests/service_pingpong.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-v3-svc
spec:
  type: ClusterIP
  selector:
    app: ex-201
  ports:
    - port: 1111
      protocol: TCP
      targetPort: 5555
